room.css
body{
  background-color:#fafafa;
  color:#3c3c3c;
  text-align:center;
  line-height:1.6;
  font-size:16px;
}
header{
  border-bottom: ridge;
  margin-bottom: 20px;
  padding-bottom: 5px;
  font-size:18px;
}
header h2{
  line-height:1;
  margin: 20px auto 5px;
}
header p {
  margin: 0 auto 10px;
}
header #title-links a {
  display: inline-block;
}
@media not all and (max-width: 750px) {
  header {
    display: table;
    width: 100%;
  }
  header h2 {
    margin: 10px auto;
  }
  header p {
    margin-bottom: 15px;
  }
  header #title-links {
    display: table-header-group;
    text-align: right;
  }
}
@media not all and (max-width: 1000px) {
  header h2 {
    margin-top: 0;
  }
}
#messages {
  margin: 0 auto;
  width: 100%;
  max-width: 650px;
  display: inline-block;
  text-align: left;
}
#messages > .message{
  word-wrap: break-word;
}
#messages > .chara-Narrator {
  background-color: #fff;
  box-shadow: 0 1px 1px #bbb;
  outline: dotted 1px #bbb;
  outline-offset: -5px;
  padding: 10px;
  text-align: center;
}
#messages > .chara-Narrator > .name {
  display: none;
}
#messages > .message:not(.chara-Narrator) {
  margin: 10px;
  margin-top: 22px;
  padding: 6px 8px 10px;
  border-radius: 16px;
  border-bottom-left-radius: 0;
  box-shadow: 0 2px 3px #555;
  position: relative;
  max-width: 100%;
}
#messages > .message:not(.chara-Narrator) > .name{
  display: inline-block;
  position: absolute;
  left: 25px;
  top: -13px;
  background-color: inherit;
  border-radius: 4px;
  padding: 3px 10px;
  font-size: 12px;
  letter-spacing: 1px;
  word-spacing: 1px;
  z-index: 100;
  box-shadow: 0 1px 2px #555;
}
#messages > .message:not(.chara-Narrator) > .content {
  background-color: white;
  color: black;
  opacity: 0.9;
  padding: 5px;
  border-radius: 12px;
  border-bottom-left-radius: 0;
  box-shadow: 0 1px 2px #888 inset;
}
#messages > .info {
  text-align: center;
}
#messages > .info ol {
  display: inline-block;
  text-align: left;
}

#characters {
  display: block;
  float: right;
  width: 150px;
  padding: 20px;
  border: dotted 1px #555;
}
#characters > .character {
  font-weight: bold;
}
#characters .chara-Narrator {
  color: #555;
}
#characters > .character a {
  display: block;
  margin: 5px;
  text-decoration: none;
  box-shadow: 0 1px 2px #888;
}
#characters > .character a:hover {
  opacity: 0.5;
}

#new-character {
  margin-top: 20px;
  border-top: dotted 1px #555;
}

input,
textarea {
  font-family:serif;
}
#message-box {
  width: 100%;
  max-width: 700px;
  margin: 20px auto 0;
  border: dotted 1px #555;
  border-spacing: 10px;
  clear: both;
}
#message-bar {
  display: table-row;
}
#message-bar #message-text,
#message-bar #message-button {
  display: table-cell;
  vertical-align: middle;
  padding: 0;
  margin: 0;
}
#message-box #message-text {
  width: 100%;
}
#message-text textarea {
  width: 100%;
  background-color: white;
  border: solid 1px #555;
  box-shadow: 0 1px 1px #555 inset;
  padding: 3px;
  margin: -3px;
  font-size: 16px;
  resize: vertical;
  vertical-align: middle;
  min-height: 60px;
}
#message-box input[type=submit] {
  min-width: 80px;
  height: 68px;
  font-size:18px;
  background-color: #fff;
  color: #222;
  border:solid 1px #3c3c3c;
  font-weight:bold;
  box-shadow: 0 1px 2px #888;
}
#message-box input[type=submit]:hover,
#message-box input[type=submit]:active {
  cursor:pointer;
  background-color:#3c3c3c;
  box-shadow: 0 1px 10px #555;
  color:#fafafa;
}

.pages {
  margin: 20px;
}

ul#stats {
  display: inline-block;
  border: dotted 1px #555;
  margin: 0;
  padding: 20px;
  padding-left: 40px;
}
#stats li {
  text-align: left;
}

